<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:menu="@menu/menu_home_topbar"
            app:title="@string/ecobin" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:backgroundTint="@color/cardview_color"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvClassify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/classify_your_waste"
                android:textColor="@color/green_500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/please_select_a_photo_of_waste_to_analyze_the_waste_classification"
                android:textColor="@color/green_400"
                app:layout_constraintStart_toStartOf="@id/tvClassify"
                app:layout_constraintTop_toBottomOf="@id/tvClassify" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_scroll"
        app:layout_constraintBottom_toTopOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/previewImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/preview_gambar"
                android:scaleType="fitCenter"
                android:src="@drawable/image_placeholder"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                app:srcCompat="@drawable/image_placeholder" />

            <TextView
                android:id="@+id/tvEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pilihlah_gambar_dari_galeri_terlebih_dahulu"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/reset"
                android:visibility="gone"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/green_500"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/camera"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/btnAnalyze"
        app:layout_constraintEnd_toStartOf="@id/btnGallery"
        app:layout_constraintStart_toStartOf="@id/cardView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/green_500"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/gallery"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/btnCamera"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        app:layout_constraintTop_toTopOf="@id/btnCamera"
        app:layout_constraintStart_toEndOf="@id/btnCamera"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAnalyze"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/green_100"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/green_500"
        android:text="@string/analyze"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        app:layout_constraintStart_toStartOf="@id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>