<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivPhoto"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />


    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@id/ivPhoto"
        app:layout_constraintTop_toTopOf="@id/ivPhoto"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        tools:text="23 Mei 2024"
        android:fontFamily="@font/lato_regular"
        android:text="@string/please_select_a_photo_of_waste_to_analyze_the_waste_classification"
        android:textColor="@color/green_400"
        app:layout_constraintWidth_max="wrap"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/classify_your_waste"
        android:textColor="@color/green_500"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tvDate"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        app:layout_constraintBottom_toTopOf="@id/btnDelete"
        tools:text="Kategori" />

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:adjustViewBounds="true"
        android:background="@drawable/delete_shape"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/delete_scan_history"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_delete" />


</androidx.constraintlayout.widget.ConstraintLayout>