<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="400dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green_500"
            app:collapsedTitleTextAppearance="@style/MenuTitle"
            app:collapsedTitleTextColor="@color/white"

            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextColor="#00FFFFFF"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:title="Hasil Analisis"
            app:titleEnabled="true"
            app:toolbarId="@+id/toolbarResult">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/result_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:background="@color/green_500"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_place_holder"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                app:srcCompat="@drawable/ic_place_holder" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarResult"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:background="@drawable/rounded_top"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/result"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

<!--            <ProgressBar-->
<!--                android:id="@+id/indicator"-->
<!--                style="@style/CircularDeterminateProgressBar"-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="150dp"-->
<!--                android:layout_marginTop="32dp"-->
<!--                android:indeterminateOnly="false"-->
<!--                android:progress="0"-->
<!--                android:progressDrawable="@drawable/progress_circle"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                tools:progress="0" />-->

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/simpan"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGuide" />

            <TextView
                android:id="@+id/tvGuide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/result_guest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_text" />

<!--            <TextView-->
<!--                android:id="@+id/tvScore"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:includeFontPadding="false"-->
<!--                android:text="@string/_0_persen"-->
<!--                android:textAlignment="center"-->
<!--                android:textSize="32sp"-->
<!--                android:textStyle="bold"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/result_text"-->
<!--                app:layout_constraintEnd_toEndOf="@+id/indicator"-->
<!--                app:layout_constraintStart_toStartOf="@+id/indicator"-->
<!--                app:layout_constraintTop_toTopOf="@+id/indicator"-->
<!--                app:layout_constraintVertical_bias=".48" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>